# cpp_course

./: .gitignore
01/: notes.txt
02/: 02_01.cpp  02_02.cpp  02_03.cpp  02_04.cpp  02_05.cpp  02_06.cpp  02_07.cpp  02_08.cpp  02_09.cpp  02_10.cpp  main  print_all_askii_chars.cpp
03/: 03_01.cpp  03_02.cpp  03_03.cpp  03_04.cpp  03_05_adapter.cpp  03_05_bad.cpp  03_06.cpp  03_07.cpp  03_09.cpp  03_10.cpp  example.cpp  main  notes.txt  shapes.cpp
04/: 04_01.cpp  04_02.cpp  04_02_overloading.cpp  04_03.cpp  04_04.cpp  04_05.cpp  04_06.cpp  04_07.cpp  04_08.cpp  04_09.cpp  04_10.cpp  binom_coeff.cpp  is_function.cpp  main  notes.txt  type_trait_is_pointer.cpp
05/: 05_01.cpp  05_02.cpp  05_03.cpp  05_04.cpp  05_05.cpp  notes.txt
06/06_01/: CMakeLists.txt  Rational.cpp  Rational.hpp  main.cpp
06/06_02/: CMakeLists.txt  Mixin.cppm  Rational.cpp  Rational.cppm  main.cpp
06/06_03/: 06_01_time.sh  06_02_time.sh  output.txt
06/06_05/: CMakeLists.txt
06/06_05/source/: main.cpp  plugin_v1.cpp  plugin_v2.cpp
07/07_01/: CMakeLists.txt
07/07_01/include/: solver.hpp
07/07_01/src/: main.cpp  solver.cpp
07/07_01/tests/: tests.cpp
07/07_02/: CMakeLists.txt  Mixin.cppm  Rational.cpp  Rational.cppm  main.cpp
07/07_04/: build.sh  main.cpp
07/07_05/: build.sh  main  main.cpp
